Fix spacing issue on right

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
   height: 100vh;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
   font-family: Tahoma, "sans-serif";
   display: flex;
   flex-direction: column;
